examples/test/testpolicy7172.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7172
  namespace: namespace378
spec:
  podSelector:
    matchLabels:
      key33: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value30
          key31: value5
      podSelector:
        matchLabels:
          key36: value4
          key3: value33
          key9: value26
